build code cleanup